Added equal area model

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1311,15 +1311,15 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 \end{figure}
 \clearpage
 
-\begin{sidewaysfigure}[htbp]
+\begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=0.95\linewidth]{images/Model_visu.pdf}
+	\begin{overpic}[width=1.0\linewidth]{images/Model_visu.pdf}
 	\end{overpic}
 \caption[Alternative visualisations of the model results.]
 {{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented. Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers as illustrated in Figure 2D (main text). The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells.
 }
 \label{fig:visumodel}
-\end{sidewaysfigure}
+\end{figure}
 %
 %\begin{figure}[htbp]
 %\centering
