--- a/suppMat.tex
+++ b/suppMat.tex
@@ -197,22 +197,22 @@ Images were stored in 16-bit lossless Tagged Image File Format (TIFF). The compl
 (\href{http://fiji.sc/wiki/index.php/Correct_3D_drift}{http://fiji.sc/wiki/index.php/Correct\_3D\_drift}) which registers the time points using the phase correlation algorithm based on the intensity of the membrane channel. The dataset was then cropped to the region containing the lateral root primordium along the x-, y- and z-directions. The three-dimensional (3D) reconstruction in Figure 1B (main text) was performed with \textit{Arivis} (\href{http://www.arivis.com}{http://www.arivis.com}).
 
 \clearpage
-\section{The Virtual Lateral Roots (VLR)}
+\section{The Datasets}
 \subsection{Nuclei Segmentation and Tracking}
 \label{sec:segmentation}
 \noindent
-The nuclei were segmented and tracked manually for each dataset by means of an in-house \textit{Mathematica} (\href{http://www.wolfram.com/mathematica/}{http://www.wolfram.com/mathematica/}) program. This tool provides an interactive visual representation of the 3D datasets over time. The user can manually track the spatial position and lineage of individual cell nuclei. For each marked cell nucleus the program stores a unique identifier, the spatial position, the time point and a list holding the identification numbers of its parent cells. Cell nuclei are marked at two time points: right after the division in which the cell is born (or the very first appearance of a founder cell) and right before the cell divides (or the last time point analysed). The positions in between are interpolated linearly. Segmentation and tracking were realized for the first 24 hours of lateral root development and the resulting data was exported to a file in tabular format for further data processing and analysis (see supporting datasets in Section~\ref{sec:datasets}). We thereby created a total of five virtual lateral root (VLR) datasets that store all information about cell nuclei positions, lineages and cell divisions. Figure~\ref{fig:allTrees} shows the reconstructed cell lineage trees for all five datasets with nodes coloured according to the underlying division types. The classification of division types is explained in Section~\ref{sec:divisionTypes}.
+The nuclei were segmented and tracked manually for each dataset by means of an in-house \textit{Mathematica} (\href{http://www.wolfram.com/mathematica/}{http://www.wolfram.com/mathematica/}) program. This tool provides an interactive visual representation of the 3D datasets over time. The user can manually track the spatial position and lineage of individual cell nuclei. For each marked cell nucleus the program stores a unique identifier, the spatial position, the time point and a list holding the identification numbers of its parent cells. Cell nuclei are marked at two time points: right after the division in which the cell is born (or the very first appearance of a founder cell) and right before the cell divides (or the last time point analysed). The positions in between are interpolated linearly. Segmentation and tracking were realized for the first 24 hours of lateral root development and the resulting data was exported to a file in tabular format for further data processing and analysis (see supporting datasets in Section~\ref{sec:datasets}). We thereby created a total of five segmented-tracked datasets that store all information about cell nuclei positions, lineages and cell divisions. Figure~\ref{fig:allTrees} shows the reconstructed cell lineage trees for all five datasets with nodes coloured according to the underlying division types. The classification of division types is explained in Section~\ref{sec:divisionTypes}.
 
-In \textit{Mathematica}, we grouped the cell lineages that belong to the same cell file and assigned each cell nucleus in a file a unique colour (see Figure 1D, main text). In this context, we define the \textit{master cell file} as the one that swells the most and label it with index \textbf{0} \cite{Vermeer:2014fl}. In the radial view, cell files to the left were assigned negative indices (\textbf{-1, -2, -3}), whereas cell files to the right were assigned positive indices (\textbf{+1, +2, +3}) (see Figure 1C, main text). The cell file assignment for each cell nucleus is added to the VLR datasets.
+In \textit{Mathematica}, we grouped the cell lineages that belong to the same cell file and assigned each cell nucleus in a file a unique colour (see Figure 1D, main text). In this context, we define the \textit{master cell file} as the one that swells the most and label it with index \textbf{0} \cite{Vermeer:2014fl}. In the radial view, cell files to the left were assigned negative indices (\textbf{-1, -2, -3}), whereas cell files to the right were assigned positive indices (\textbf{+1, +2, +3}) (see Figure 1C, main text). The cell file assignment for each cell nucleus is added to the datasets.
 
 \subsection{Registration of Datasets}
 \label{sec:registration}
 \noindent
-In order to compare all five datasets of the VLR with each other we require a spatial and a temporal registration of the datasets. 
+In order to compare all five datasets with each other we require a spatial and a temporal registration of the datasets. 
 
 \subsubsection{Spatial Registration}
 \noindent
-We compute the centre of mass, the principal components and the convex hull of the set of all 3D cell positions at the last time point. Our aim is that the convex hulls of different datasets should match optimally. Using this information each dataset is then initially translated to the origin (black node in Figure~\ref{fig:spatialRegistration}, top) according to the centre of mass and rotated by its associated principal components (arrows in Figure~\ref{fig:spatialRegistration}, top). Through this, we have created a common Cartesian coordinate system resulting in three orthogonal views: \textit{Front} (x-y, growth towards the observer), \textit{side} (x-z, along shoot/root axis), and \textit{radial} view (y-z, transversal cut perpendicular to shoot/root axis). Refinements are done manually by slight affine transformations in such a way that the datasets fit to the base of the VLR with respect to the convex hulls (see Figure~\ref{fig:spatialRegistration}, bottom). This fitting represents an optimal basis for comparing different lateral roots developing from almost the same base position. The visualisation of the 3D datasets is realized in \textit{Mathematica} in which cell nuclei are rendered as
+We compute the centre of mass, the principal components and the convex hull of the set of all 3D cell positions at the last time point. Our aim is that the convex hulls of different datasets should match optimally. Using this information each dataset is then initially translated to the origin (black node in Figure~\ref{fig:spatialRegistration}, top) according to the centre of mass and rotated by its associated principal components (arrows in Figure~\ref{fig:spatialRegistration}, top). Through this, we have created a common Cartesian coordinate system resulting in three orthogonal views: \textit{Front} (x-y, growth towards the observer), \textit{side} (x-z, along shoot/root axis), and \textit{radial} view (y-z, transversal cut perpendicular to shoot/root axis). Refinements are done manually by slight affine transformations in such a way that the base of the primordia fits with respect to the convex hulls (see Figure~\ref{fig:spatialRegistration}, bottom). This fitting represents an optimal basis for comparing different lateral roots developing from almost the same base position. The visualisation of the 3D datasets is realized in \textit{Mathematica} in which cell nuclei are rendered as
 colour-coded spheres according to their respective cell lineage (see Figure~\ref{fig:trackingfounders}).
 %
 \begin{figure}[htbp]
@@ -233,9 +233,9 @@ colour-coded spheres according to their respective cell lineage (see Figure~\ref
 The lapse of time between gravistimulation and the onset of imaging differs between the recorded datasets. Therefore, we compensated for the temporal difference between the recordings by carrying out two kinds of synchronization. For temporal synchronization of the datasets, we added the time span between gravistimulation and the onset of imaging. A second approach was to synchronise on the total number of cells which gives a developmental synchronization and allows to directly compare the datasets. For this purpose, the intersection set of the number of cells among all datasets for the first and last time points are observed. Thus, the number of cells are in the range of $[10,176]$ for \#120830, $[15,160]$ for \#121204, $[18,260]$ for \#121211, $[9,143]$ for \#130508 and $[15,267]$ for \#130607. Consequently, the intersection range is $[18, 143]$ and datasets are analysed for identical numbers of cells.
 
 \clearpage
-\section{Quantitative Analysis of the VLR Datasets}
+\section{Quantitative Analysis of the Datasets}
 \subsection{Growth Rate}
-To estimate cellular growth rate and doubling time of each VLR, we performed a data fitting on the total number of cells for all datasets assuming an exponential growth model (see Figure~\ref{fig:growthcurves}):
+To estimate cellular growth rate and doubling time of each dataset, we performed a data fitting on the total number of cells for all datasets assuming an exponential growth model (see Figure~\ref{fig:growthcurves}):
 \begin{equation}
 N(t)=N_0e^{kt},
 \end{equation}
@@ -289,7 +289,7 @@ Type of division, i.e. anticlinal, periclinal or radial (see Section~\ref{sec:di
 We performed statistical analyses and plottings of the interphase duration (Figure 3C, main text and Figure~\ref{fig:mastertimediv}) and of the angle between two consecutive divisions (Figure 4C-D, I and Figure 5C, F, I, L, O in main text using \textit{R} (\href{http://www.R-project.org/}{http://www.R-project.org/}).
 
 \clearpage
-\section{Automatic Classification of Cell Divisions in the VLR}
+\section{Automatic Classification of Cell Divisions in the Datasets}
 \label{sec:divisionTypes}
 \noindent
 We developed an automatic algorithm~\cite[chapter 4]{FangerauDiss_2015} to classify the three different division types occurring during growth in the lateral root based on the orientation of the cell division axis: \textcolor{red}{\textbf{anticlinal}} divisions are parallel to the root-shoot axis, \textcolor{green}{\textbf{periclinal}} divisions are normal to the surface of the main root and \textcolor{blue}{\textbf{radial}} divisions are tangential to the surface of the main root and orthogonal to the root-shoot axis (see Figure~\ref{fig:divisionTypes}).
@@ -314,13 +314,13 @@ We developed an automatic algorithm~\cite[chapter 4]{FangerauDiss_2015} to class
 		\end{overpic}
 \caption[]
 {
-{\bf Visualisation and approximation of VLR. Top:} Nuclei of last time point for dataset $\# 130607$ in front, side and radial view. {\bf Bottom:} Approximation of the lateral root using $\alpha$-shapes.
+{\bf Visualisation and approximation of the virtual lateral root (VLR). Top:} Nuclei of last time point for dataset $\# 130607$ in front, side and radial view. {\bf Bottom:} Approximation of the lateral root using $\alpha$-shapes.
 }
 	\label{fig:alphaShapes}
 	\end{center}
 \end{figure}
 %
-However, when using a single surface to represent the whole VLR we can only derive normal vectors for the cells on the surface. This means that for cells dividing in the interior of the lateral root, no suitable normal vectors can be retrieved to classify the division orientations. For this reason, after a division classified as periclinal, the ``outer'' daughter cell is assigned to a new $\alpha$-shape with a new colouring (see Figure~\ref{fig:newSurfaceGeneration}). By generating new surfaces with this approach we are able to obtain normal vectors even for almost all cells dividing in the interior. For the remaining cells within a surface, the normal is determined by the closest surface normal in terms of the closest Euclidean distance between the cell position and a surface. The algorithm is capable of classifying most of the cell divisions correctly. We manually verified the classification and corrected it whenever necessary. The cell division type for each cell nucleus is added to the VLR datasets. The method is implemented in a visualisation software called \textit{scifer} (\href{http://www.iwr.uni-heidelberg.de/groups/CoVis/software.php}{http://www.iwr.uni-heidelberg.de/groups/CoVis/software.php}). For a more detailed description of the algorithm and a performance analysis we refer the reader to the thesis of Fangerau~\cite[chapter 4]{FangerauDiss_2015}.
+However, when using a single surface to represent the whole VLR we can only derive normal vectors for the cells on the surface. This means that for cells dividing in the interior of the lateral root, no suitable normal vectors can be retrieved to classify the division orientations. For this reason, after a division classified as periclinal, the ``outer'' daughter cell is assigned to a new $\alpha$-shape with a new colouring (see Figure~\ref{fig:newSurfaceGeneration}). By generating new surfaces with this approach we are able to obtain normal vectors even for almost all cells dividing in the interior. For the remaining cells within a surface, the normal is determined by the closest surface normal in terms of the closest Euclidean distance between the cell position and a surface. The algorithm is capable of classifying most of the cell divisions correctly. We manually verified the classification and corrected it whenever necessary. The cell division type for each cell nucleus is added to the datasets. The method is implemented in a visualisation software called \textit{scifer} (\href{http://www.iwr.uni-heidelberg.de/groups/CoVis/software.php}{http://www.iwr.uni-heidelberg.de/groups/CoVis/software.php}). For a more detailed description of the algorithm and a performance analysis we refer the reader to the thesis of Fangerau~\cite[chapter 4]{FangerauDiss_2015}.
 %
 \begin{figure}[htbp]
 	\begin{center}
@@ -370,7 +370,7 @@ However, when using a single surface to represent the whole VLR we can only deri
 \clearpage
 \section{Quantification and Visualisation of Lateral Root Deformation}
 \noindent
-The VLR datasets served as a basis to perform an analysis of the lateral root deformation as a function of time. The analysis was inspired by the work of Graner~et~al.~\cite{graner_et_al_2008}. The idea is that the deformation can be computed using geometrical and topological properties of the underlying tissue. Since in our case we have a set of 3D cell nuclei for each time point (red nodes in Figure~\ref{fig:deformation}) we use their 3D positions to generate a triangulation (e.g. Delaunay triangulation) creating a surface that represents the tissue (see Figure~\ref{fig:deformation}). The deformation analysis can be performed object- or spatial-oriented. This means that either the deformation is evaluated and illustrated for each cell or the total area of interest is subdivided into regions of equal sizes to measure the deformation within each subregion. We consider the former case because we want to focus on individual cell changes. Besides, the initial number of cells in each dataset is quite small and therefore, the total area of interest is not covered by all cells which makes an object-oriented analysis per cell more reasonable.
+The datasets served as a basis to perform an analysis of the lateral root deformation as a function of time. The analysis was inspired by the work of Graner~et~al.~\cite{graner_et_al_2008}. The idea is that the deformation can be computed using geometrical and topological properties of the underlying tissue. Since in our case we have a set of 3D cell nuclei for each time point (red nodes in Figure~\ref{fig:deformation}) we use their 3D positions to generate a triangulation (e.g. Delaunay triangulation) creating a surface that represents the tissue (see Figure~\ref{fig:deformation}). The deformation analysis can be performed object- or spatial-oriented. This means that either the deformation is evaluated and illustrated for each cell or the total area of interest is subdivided into regions of equal sizes to measure the deformation within each subregion. We consider the former case because we want to focus on individual cell changes. Besides, the initial number of cells in each dataset is quite small and therefore, the total area of interest is not covered by all cells which makes an object-oriented analysis per cell more reasonable.
 %
 \begin{figure}[htbp]
 	\begin{center}
@@ -497,7 +497,7 @@ We use a non-mechanical 2D vertex-based model for lateral root development. The 
 
 %L-systems or also called Lindenmayer~Systems~\cite{lindenmayer_1968, prusinkiewicz_lindenmayer_1990}. The L-system is a language that consists of a set of strings based on predefined rules. More precisely, it consists of an axiom, the starting point of the system, and a set of production rules. The growth of a dynamic structure is realized by applying these rules to the axiom in which the resulting string is again in the language of the used system. Through this, the growth can be described by an infinite set of strings that 'steers' the growth behaviour. L-systems are commonly used to model plant growths as well as to generate fractals such as the Sierpinski triangle, for example.
 
-We use a 2D model for two main reasons. First, we focus our analysis on the cells located in the master cell file of the VLR. These cells contribute most to the growth of the VLR and feature the property that they are mostly located within a plane in 3D. Thus, their 3D locations can be projected onto a 2D plane in side view without (too much) loss of information. Second, such a model is much easier to describe than a 3D model which significantly reduces the complexity and therefore simplifies the analysis. Our intention is the creation of an idealised model based on simple rules that allows a comparison to the VLR datasets.
+We use a 2D model for two main reasons. First, we focus our analysis on the cells located in the master cell file. These cells contribute most to the growth of the primordium and feature the property that they are mostly located within a plane in 3D. Thus, their 3D locations can be projected onto a 2D plane in side view without (too much) loss of information. Second, such a model is much easier to describe than a 3D model which significantly reduces the complexity and therefore simplifies the analysis. Our intention is the creation of an idealised model based on simple rules that allows a comparison to the datasets.
 
 \noindent
 Our model requires the application of a underlying \textbf{model surface} that represents the developing lateral root. Furthermore, the positioning and the number of \textbf{founder cells} that contribute to the development have to be determined. Additionally, the \textbf{rules for cell division events} have to be defined, i.e.~the type and time point of a division event. The simulation starts with a predefined number and positioning of founder cells and develops over time based on the underlying surface structure. During the simulation, the model surface and the cells within grow and increase in area. According to the chosen division properties, a cell divides if it exceeds a specific area threshold or area ratio with respect to its initial size right after its birth. Through this, we generate a convenient model representing the growth of the lateral root.
@@ -568,7 +568,7 @@ As a consequence, given only a pair of B\'ezier surfaces $S_{first}$ and $S_{las
 \begin{equation}
 c_{i,j} = (1-t) \cdot a_{i,j} + t \cdot b_{i,j}, \qquad \forall i, j \in [0, n], [0, m],
 \end{equation}
-with the control points $c_{i,j}$ of the current B\'ezier surface $S_{cur}$ and $t \in [0,1]$ as the temporal interpolation factor. By this, only two B\'ezier surfaces need to be generated manually for the model while the B\'ezier surfaces in between are given by interpolation which ensures a smooth growth behaviour of the VLR. Another advantage of using this kind of surface is that the mapping of each pair of parametric coordinates $u_i, v_i$ to a 2D position on the surface is unique although of course the developing surface structure will change over time (see Figure~\ref{fig:modelSurface}).
+with the control points $c_{i,j}$ of the current B\'ezier surface $S_{cur}$ and $t \in [0,1]$ as the temporal interpolation factor. By this, only two B\'ezier surfaces need to be generated manually for the model while the B\'ezier surfaces in between are given by interpolation which ensures a smooth growth behaviour of the model. Another advantage of using this kind of surface is that the mapping of each pair of parametric coordinates $u_i, v_i$ to a 2D position on the surface is unique although of course the developing surface structure will change over time (see Figure~\ref{fig:modelSurface}).
 %
 \begin{figure}[htbp]
 	\begin{center}
@@ -686,7 +686,7 @@ In Model 3, the initial cell configuration is identical to Model 1 but we random
 \noindent
 \textbf{Model 4: Basal growth}\\
 \noindent
-Model 4 is designed to check whether the lateral root growth itself is responsible for the emergence of the observed sequence of periclinal divisions. For this purpose, we change the deformation behaviour of the B\'ezier surface from an equidistant distribution of control points to a distribution in which the control points are growing faster towards the dome tip (see Figure~\ref{fig:basalGrowth}). We force the first division round to be an asymmetric anticlinal one and we use the Besson-Dumais rule for subsequent divisions. As a result, the model leads to more dominant cell divisions at the base of the VLR. This model impairs the high-order pattern of periclinal divisions (see Figure 5M-O in main text) although the layer formation and division orientations are similar to the model results using an equidistant distribution of control points. \TODO{@Alexis: in the main text we are using 1DC for the basal growth; should we maybe only use NH? Then all models share the same cell founder setting.}
+Model 4 is designed to check whether the lateral root growth itself is responsible for the emergence of the observed sequence of periclinal divisions. For this purpose, we change the deformation behaviour of the B\'ezier surface from an equidistant distribution of control points to a distribution in which the control points are growing faster towards the dome tip (see Figure~\ref{fig:basalGrowth}). We force the first division round to be an asymmetric anticlinal one and we use the Besson-Dumais rule for subsequent divisions. As a result, the model leads to more dominant cell divisions at the base of the primordium. This model impairs the high-order pattern of periclinal divisions (see Figure 5M-O in main text) although the layer formation and division orientations are similar to the model results using an equidistant distribution of control points. \TODO{@Alexis: in the main text we are using 1DC for the basal growth; should we maybe only use NH? Then all models share the same cell founder setting.}
 %
 \begin{figure}[htbp]
 	\begin{center}
@@ -694,7 +694,7 @@ Model 4 is designed to check whether the lateral root growth itself is responsib
 		\end{overpic}
 \caption[]
 {
-{\bf Growth behaviour of the surface model. Left:} Equidistant distribution of control points in a B\'ezier surface. \textbf{Right:} Basal growth of VLR which impairs the high-order pattern of periclinal divisions.
+{\bf Growth behaviour of the surface model. Left:} Equidistant distribution of control points in a B\'ezier surface. \textbf{Right:} Basal growth of the model which impairs the high-order pattern of periclinal divisions.
 }
 	\label{fig:basalGrowth}
 	\end{center}
@@ -791,7 +791,7 @@ For example, consider the first B\'ezier surface with two cells at the first mod
 
 \subsection{Visual Division Analysis}
 \noindent
-We run several simulations of one model using division rules with randomized variation, each resulting in one division sequence tree as shown in Figure~\ref{fig:treeDivisionSequencesCells}. Multiple simulation runs of each model allow us to use statistically solid model results and to compare them with the VLR datasets.
+We run several simulations of one model using division rules with randomized variation, each resulting in one division sequence tree as shown in Figure~\ref{fig:treeDivisionSequencesCells}. Multiple simulation runs of each model allow us to use statistically solid model results and to compare them with the datasets.
 %
 \begin{figure}[htbp]
 	\begin{center}
@@ -1106,6 +1106,17 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 
 \clearpage
 %
+\begin{figure}[htbp]
+\centering
+	\begin{overpic}[width=1.\linewidth]{images/GravitropicStimulation.pdf}
+	\end{overpic}
+\caption[Lateral root induction by gravistimulation.]
+{{\bf Lateral root induction by gravistimulation.} Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. See Supplemental movie  \href{http://youtu.be/sLvVCbWye-E}{\textcolor{blue}{[LINK]}}}.
+	\label{fig:gravistimul}
+\end{figure}%
+
+\clearpage
+
 \begin{figure}[H]
 \centering
 	\begin{overpic}[width=1.\linewidth]{images/mDSLM_specimen_qc_v2.pdf}
@@ -1115,16 +1126,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 (Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition.}
 	\label{fig:mDSLM}
 \end{figure}
-%
-\clearpage
-\begin{figure}[htbp]
-\centering
-	\begin{overpic}[width=1.\linewidth]{images/GravitropicStimulation.pdf}
-	\end{overpic}
-\caption[Lateral root induction by gravistimulation.]
-{{\bf Lateral root induction by gravistimulation.} Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. See Supplemental movie  \href{http://youtu.be/sLvVCbWye-E}{\textcolor{blue}{[LINK]}}}.
-	\label{fig:gravistimul}
-\end{figure}
+
 %
 % \clearpage
 % \begin{figure}[htbp]
@@ -1190,7 +1192,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 	\begin{overpic}[width=1.\linewidth]{images/Growth-Rate-Curves.pdf}
 	\end{overpic}
 \caption[Exponential growth profile of the lateral root primordia.]
-{{\bf Exponential growth profile of the lateral root primordia.} For each indicated VLR, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.}
+{{\bf Exponential growth profile of the lateral root primordia.} For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.}
 	\label{fig:growthcurves}
 \end{figure}
 %
@@ -1203,6 +1205,18 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 % {{\bf Geometry and volume measurements.} (A) Convex hull of all cell nuclei of VLR dataset \#120830 in radial and side views. (B) The height is computed by the distance between the minimum and maximum positions of all cell nuclei in the master cell file in the radial view. (C) The width is calculated by the largest distance of all cell nuclei positions in the radial view. (D) The length is measured as the maximum distance between any two cells in side view at 50\% of the height. (E) Average volume per cell as a function of the total number of cells. The total volume of the VLR is given by the volume of the convex hull. (F) Length to width ratio. The triangles highlight the first and second periclinal cell division, the discs the first radial division.}
 % 	\label{fig:VLWR}
 % \end{figure}
+%
+\clearpage
+
+\begin{sidewaysfigure}
+\centering
+		\begin{overpic}[width=1.\linewidth]{images/datasetsLayering.pdf}
+		\end{overpic}
+\caption[Layer visualisations of the five datasets.]
+{
+{\bf Layer visualisations of the five datasets.} On top of each column, all cell nuclei of a dataset is shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions.}
+	\label{fig:datasetsLayering}
+\end{sidewaysfigure}
 %
 \clearpage
 %
@@ -1231,17 +1245,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 %
 \clearpage
 %
-\begin{sidewaysfigure}
-\centering
-		\begin{overpic}[width=1.\linewidth]{images/datasetsLayering.pdf}
-		\end{overpic}
-\caption[Layer visualisations of the five VLR datasets.]
-{
-{\bf Layer visualisations of the five VLR datasets.} On top of each column, all cell nuclei of a dataset is shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions.}
-	\label{fig:datasetsLayering}
-\end{sidewaysfigure}
-%
-\clearpage
+
 
 %
 \begin{figure}[htbp]
@@ -1382,7 +1386,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 \subsection{Supporting Datasets}
 \label{sec:datasets}
 \noindent
-In this section, we briefly explain the file formatting of the generated and analysed VLR files stored in the \textit{*.csv} format. In total, there are five wild type datasets (\#120830WT.csv, \#121204WT.csv, \#121211WT.csv, \#130508WT.csv, \#130607WT.csv) and the \emph{aurora} mutant (auroraMutant.csv). As already explained in section~\ref{sec:segmentation}, for each cell, we only store the position of the first and the last frame before it divides. In the program, the positions in between are interpolated linearly. All files share the same header information which are explained below:
+In this section, we briefly explain the file formatting of the generated and analysed dataset files stored in the \textit{*.csv} format. In total, there are five wild type datasets (\#120830WT.csv, \#121204WT.csv, \#121211WT.csv, \#130508WT.csv, \#130607WT.csv) and the \emph{aurora} mutant (auroraMutant.csv). As already explained in section~\ref{sec:segmentation}, for each cell, we only store the position of the first and the last frame before it divides. In the program, the positions in between are interpolated linearly. All files share the same header information which are explained below:
 
 \noindent
 \begin{tabularx}{\textwidth}{@{} >{\RaggedRight}p{2.8cm} X @{}}
