Need for update of movie links of model

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1380,6 +1380,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
     \item Dataset \#121211 \href{http://youtu.be/NOouEVqpGj8}{\textcolor{blue}{[LINK]}}.
     \item Dataset \#130508 \href{http://youtu.be/EajarNlRvtA}{\textcolor{blue}{[LINK]}}.
   \end{Itemize}
+  \TODO{@Alexis: please update all model movies and their links.}
   \item \emph{Geometric} model of lateral root formation, corresponding to Figure 5D (main text) \href{https://youtu.be/GLUKCE4nN3A}{\textcolor{blue}{[LINK]}}.
   \item \emph{Random} model of lateral root formation, corresponding to Figure 5G (main text) \href{https://youtu.be/V9xkyPfRQeM}{\textcolor{blue}{[LINK]}}.
   \item \emph{1\textsuperscript{st} random then geometric} model of lateral root formation, corresponding to Figure 5J (main text)
@@ -1387,7 +1388,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
   \item \emph{Basal growth} model of lateral root formation, corresponding to Figure 5M (main text) \href{https://youtu.be/TZqwYTnmAgg}{\textcolor{blue}{[LINK]}}.
   \item \emph{1\textsuperscript{st} asymmetric then geometric} model of lateral root formation, corresponding to Figure~\ref{fig:visumodel} \href{https://youtu.be/ypBdyjFyqYw}{\textcolor{blue}{[LINK]}}.
   \item \emph{Random with equal areas} model of lateral root formation, corresponding to Figure~\ref{fig:visumodel}
-  \TODO{create movie and add movie link}
+  \TODO{add movie link}
 
   \item Time lapse recording of the \emph{aur1-2 aur2-2} double mutant, dataset \#131203. Corresponds to Figure~\ref{fig:aurora} \href{http://youtu.be/y8b-0J4lPHg}{\textcolor{blue}{[LINK]}}.
   \item Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant \href{http://youtu.be/kkQZub-puVI}{\textcolor{blue}{[LINK]}}.
